# ArtLens

./: .gitignore  README.md  artlens_deepdive.html  pyproject.toml
artlens/: Dockerfile  README.md  app.py  calibrate.py  explain_phase5.py  push_to_hub.py  pyproject.toml  recompute_mahalanobis.py  requirements_spaces.txt  train.py  train_phase3.py  train_phase4.py
artlens/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
artlens/frontend/src/: App.jsx  index.css
artlens/frontend/src/components/: AnimatedGradientBg.jsx  ConfidenceBar.jsx  CursorGlow.jsx  DistanceChart.jsx  FlagModal.jsx  GeneratorBadge.jsx  HeatmapViewer.jsx  InfoTip.jsx  Navbar.jsx  ResultCard.jsx  SignalBreakdown.jsx  UploadZone.jsx
artlens/frontend/src/lib/: api.js  predictionHistory.js  signalMessaging.js  supabase.js
artlens/frontend/src/pages/: About.jsx  Batch.jsx  Home.jsx
